my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8000
  selector:
    app: my-app
